--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Base configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/banking_app?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=wstxp@b
+spring.datasource.username=${username}
+spring.datasource.password=${password}
 spring.jpa.hibernate.ddl-auto=update
-#server.port=8082
+logging.level.org.springframework.web=DEBUG
